--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -25,7 +25,7 @@
                 <form id="indicatorfilter" method="GET">
                    <div class="col-xs-4 col-sm-2 col-md-1">
                     <span class="pma-fg-light-green titsearch"><strong>AÑO</strong></span>
-                    <select name="year">
+                    <select name="year" id="year">
                        {% for ayear in year_list %}
                        <option {% if ayear == year|add:"0" %}selected{% endif %} value="{{ayear}}">{{ayear}}</option>
                        {% endfor %}
@@ -33,7 +33,7 @@
                </div>
                <div class="col-xs-8 col-sm-4 col-md-3">
                   <span class="pma-fg-light-green titsearch"><strong>MUNICIPIO</strong></span>
-                  <select class="municipio pull-right">
+                  <select class="municipio pull-right" name="municipio">
                       <option></option>
                       <option class="amarillo">Consolidado Municipal</option>
                       {% regroup municipios by depto as departamentos %}
