--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -46,7 +46,7 @@
                       {% endfor %}
                   </select>
                </div>
-               <div class="col-xs-9 col-sm-5 col-md-3">
+               <div class="col-xs-9 col-sm-5 col-md-3 indicadores">
                 <span class="pma-fg-light-green titsearch"><strong>Indicador</strong></span>
                 <select name="indicador" class="indicator" id="indicator">
                    <option value="">Consolidado Municipal</option>
