--- a/core/static/css/pma.css
+++ b/core/static/css/pma.css
@@ -533,7 +533,7 @@ footer .copyright {
     height:100% !important;
 }
 */
-#indicator {
+#indicator, #year {
     float: left;
     width: 100%;
     padding-left: 5px;
@@ -552,11 +552,26 @@ footer .copyright {
     text-transform: uppercase;
     font-weight: bold;
 }
-#indicator option {
+#indicator option, #year option {
     background: #fff;
     color: #333;
     text-transform: none;
     font-weight: normal;
     padding: 5px;
     font-size: 16px;
+}
+.indicadores:after, .years:after {
+    content: "";
+    pointer-events: none;
+    box-sizing: border-box;
+    border-color: #fff transparent transparent transparent;
+    border-style: solid;
+    border-width: 5px 4px 0 4px;
+    height: 0;
+    right: 0%;
+    margin-left: -4px;
+    margin-top: 10px;
+    position: absolute;
+    top: 50%;
+    width: 0;
 }
